trunk/Archive2/05/bddd0f3ef0df00/output
main.cpp: In instantiation of 'void foo() [with FunctionType = Bar; T = int]':
main.cpp:48:14:   required from here
main.cpp:29:5: error: invalid use of incomplete type 'struct TD<int>'
     TD<T>();
     ^
main.cpp:4:8: error: declaration of 'struct TD<int>'
 struct TD; //type display
        ^
